[GPUP] 2 web audio WPT tests fail when media in GPU Process is enabled https://bugs.webkit.org/show_bug.cgi?id=221696 <rdar://problem/74440772>

Reviewed by Eric Carlson.

Source/WebKit:

Test fails when AudioDestination.maxChannelCount is queried and returns 0; pipe the correct
value through from the GPU process.

* GPUProcess/media/RemoteAudioSessionProxy.cpp:
(WebKit::RemoteAudioSessionProxy::configuration):
* WebProcess/GPU/media/RemoteAudioSession.h:
* WebProcess/GPU/media/RemoteAudioSessionConfiguration.h:
(WebKit::RemoteAudioSessionConfiguration::encode const):
(WebKit::RemoteAudioSessionConfiguration::decode):

LayoutTests:

* platform/wk2/TestExpectations:


Canonical link: https://commits.webkit.org/235667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274891 268f45cc-cd09-0410-ab3c-d52691b4dbfc